RESOLVED FIXED81388
incorrectly removing scrollbar height for auto height flexbox children
https://bugs.webkit.org/show_bug.cgi?id=81388
Summary incorrectly removing scrollbar height for auto height flexbox children
Tony Chang
Reported 2012-03-16 12:19:36 PDT
incorrectly removing scrollbar height for auto height flexbox children
Attachments
Patch (4.85 KB, patch)
2012-03-16 12:21 PDT, Tony Chang
no flags
Patch (3.86 KB, patch)
2012-03-16 12:31 PDT, Tony Chang
no flags
Patch (3.78 KB, patch)
2012-03-16 12:31 PDT, Tony Chang
ojan: review+
Tony Chang
Comment 1 2012-03-16 12:21:29 PDT
Tony Chang
Comment 2 2012-03-16 12:25:27 PDT
Comment on attachment 132343 [details] Patch Ojan gave me a better idea for the test to handle lion scrollbars (which have no size).
Tony Chang
Comment 3 2012-03-16 12:31:24 PDT
Tony Chang
Comment 4 2012-03-16 12:31:57 PDT
Tony Chang
Comment 5 2012-03-16 13:16:26 PDT
Note You need to log in before you can comment on or make changes to this bug.