incorrectly removing scrollbar height for auto height flexbox children https://bugs.webkit.org/show_bug.cgi?id=81388

Reviewed by Ojan Vafai.

Source/WebCore:

In a column flexbox, when computing the preferred height of an auto
height child, we were subtracting out the horizontal scrollbar height.

New test case in css3/flexbox/columns-auto-size.html.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::preferredMainAxisContentExtentForChild):

LayoutTests:

* css3/flexbox/columns-auto-size-expected.txt:
* css3/flexbox/columns-auto-size.html:

git-svn-id: svn://svn.chromium.org/blink/trunk@111053 bbb929c8-8fbe-4397-9dbb-9b2b20218538